--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-modal": "^3.16.3",
     "react-spinners": "^0.17.0"
   },
   "devDependencies": {
